design-system/.nx/cache/terminalOutputs/3392149250183721400
file:///Users/devlee/Documents/fastcampus/frontend-scenario/design-system/packages/theme/esbuild.js:2
import pkg from './package.json' assert { type: 'json' };
                                 ^^^^^^

SyntaxError: Unexpected identifier 'assert'
[90m    at compileSourceTextModule (node:internal/modules/esm/utils:338:16)[39m
[90m    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:102:18)[39m
[90m    at #translate (node:internal/modules/esm/loader:437:12)[39m
[90m    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:484:27)[39m
[90m    at async ModuleJob._link (node:internal/modules/esm/module_job:115:19)[39m

Node.js v22.13.1
